--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "postcss": "^7.0.32",
+    "postcss-load-config": "^2.1.0",
+    "sirv-cli": "^1.0.0",
+    "svelte-preprocess": "^4.0.10",
+    "tailwindcss": "^1.6.2"
   }
 }
