--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "svelte-app",
   "version": "1.0.0",
+  "main": "./src/electron.js",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests",
+    "electron": "run-s build pure-electron",
+    "pure-electron": "electron ."
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
+    "cross-env": "^7.0.2",
+    "electron": "^10.1.3",
     "jest": "^26.4.1",
+    "npm-run-all": "^4.1.5",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
