--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "./src/electron.js",
   "scripts": {
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder",
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
@@ -15,6 +17,7 @@
     "@rollup/plugin-node-resolve": "^8.0.0",
     "cross-env": "^7.0.2",
     "electron": "^10.1.3",
+    "electron-builder": "^22.9.1",
     "jest": "^26.4.1",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.3.4",
