Use icon from public folder

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "appId": "com.lamob.app",
     "productName": "La Mob",
     "win": {
-      "icon": "public/build/icon.png"
+      "icon": "public/icon.png"
     }
   },
   "scripts": {
